--- a/assets/css/modules/_work.sass
+++ b/assets/css/modules/_work.sass
@@ -37,6 +37,7 @@
           color: #858585
 
         &-title
+          display: none
           margin-top: 10px
           font-size: 12px
           font-weight: 700
@@ -44,7 +45,7 @@
 
         &-description
           display: none
-          max-width: 250px
+          max-width: 350px
           margin: 0 auto
 
         &-image
