fixed text area

--- a/assets/css/modules/_hire.sass
+++ b/assets/css/modules/_hire.sass
@@ -165,3 +165,9 @@
       .information-email
         height: 40px
         font-size: 24px
+      
+      .information-message
+        color: black
+        width: calc(60vw)
+        max-width: 700px
+        height: calc(20vh)
