--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -291,6 +291,7 @@ body {background-color:#0c0c0c; font-size:14px; line-height:1.6; font-family:"Mo
 .work-request--information input[type="text"]:focus,.work-request--information input[type="email"]:focus{outline:none;background-color:#0c0c0c}
 .work-request--information label{position:absolute;top:0;left:0;pointer-events:none;-webkit-transition:top .2s ease-in-out,font-size .2s ease-in-out;transition:top .2s ease-in-out,font-size .2s ease-in-out}
 .work-request--information input:focus+label,.work-request--information input.has-value+label{top:-15px;font-size:14px}
+.information-message {color: black; width: calc(60vw); max-width: 700px; height: calc(20vh)}
 @media (max-width: 767px){
 	.work-request--options{-webkit-box-orient:horizontal;-webkit-box-direction:normal;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-justify-content:space-around;-ms-flex-pack:distribute;justify-content:space-around}
 	.work-request--options .options-a,.work-request--options .options-b{display:block;width:auto}
