--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -272,7 +272,7 @@ body {background-color:#0c0c0c; font-size:14px; line-height:1.6; font-family:"Mo
 .contact--lockup .modal--options a{display:block;width:100%;padding:8px 0;text-decoration:none;color:#fff;font-weight:700}
 .hire{position:relative;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;width:700px;max-width:75%;height:100%;-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;margin:0 auto}
 
-/* MESSAGE ME */
+/* MESSAGE */
 @media (max-width: 1180px){.hire{max-width:100%}}
 .hire h2{margin:0 0 20px 0;font-size:30px;text-align:center}
 .work-request{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;width:100%;-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;color:#fff}
@@ -291,7 +291,7 @@ body {background-color:#0c0c0c; font-size:14px; line-height:1.6; font-family:"Mo
 .work-request--information input[type="text"]:focus,.work-request--information input[type="email"]:focus{outline:none;background-color:#0c0c0c}
 .work-request--information label{position:absolute;top:0;left:0;pointer-events:none;-webkit-transition:top .2s ease-in-out,font-size .2s ease-in-out;transition:top .2s ease-in-out,font-size .2s ease-in-out}
 .work-request--information input:focus+label,.work-request--information input.has-value+label{top:-15px;font-size:14px}
-.information-message {color: black; width: calc(60vw); max-width: 700px; height: calc(20vh)}
+.information-message {color: black; width: calc(80vw); max-width: 700px; height: calc(20vh); -webkit-box-align: center;}
 @media (max-width: 767px){
 	.work-request--options{-webkit-box-orient:horizontal;-webkit-box-direction:normal;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-justify-content:space-around;-ms-flex-pack:distribute;justify-content:space-around}
 	.work-request--options .options-a,.work-request--options .options-b{display:block;width:auto}
